@@ -213,7 +213,7 @@ class J1772EVSEController {
 
 #ifdef TIME_LIMIT
   uint8_t m_timeLimit15; // increments of 15min to extend charge time
-  unsigned long m_timeLimitTotMs; // total time limit in ms including charge time before start
+  time_t m_timeLimitEnd; // end time
 #endif
 
 #ifdef AMMETER
@@ -419,11 +419,11 @@ public:
   int32_t GetChargingCurrent() { return -1; }
 #endif // AMMETER
 #ifdef TIME_LIMIT
-  void ClrTimeLimit() { m_timeLimitTotMs = 0; m_timeLimit15 = 0; }
-  void SetTimeLimitTotMs(unsigned long limit) { m_timeLimitTotMs = limit; }
+  void ClrTimeLimit() { m_timeLimitEnd = 0; m_timeLimit15 = 0; }
+  void SetTimeLimitEnd(time_t limit) { m_timeLimitEnd = limit; }
   void SetTimeLimit15(uint8_t mind15);
   uint8_t GetTimeLimit15() { return m_timeLimit15; }
-  unsigned long GetTimeLimitTotMs() { return m_timeLimitTotMs; }
+  time_t GetTimeLimitEnd() { return m_timeLimitEnd; }
 #endif // TIME_LIMIT
   void ReadPilot(uint16_t *plow=NULL,uint16_t *phigh=NULL);
   void Reboot();
