@@ -1,6 +1,12 @@
 Change Log
 
+D4.12.2 20180206 SCL
+- revamp time limit code to base on seconds instead of millis(). time limit
+	fix in D4.12.1 was completely wrong. in existing code time limit was
+	getting reset every time entering sleep state
+	
 D4.12.1 20180206 SCL
+BUGGY DO NOT USE
 - time limit - used to be total length of charge session
 	-> now, setting *extends* total charge session time
 - charge limit - used to be total kWh of charge session
